kandula-manifests/kandula-app.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: kandula
  labels:
    app: kandula

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kandula-app
  namespace: kandula
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kandula
  template:
    metadata:
      labels:
        app: kandula
    spec:
      serviceAccountName: kandula-sa
      containers:
      - name: kandula-app
        image: 
        ports:
        - containerPort: 5000
        resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"  
        
---

apiVersion: v1
kind: Service
metadata:
  name: kandula-service
  namespace: kandula
spec:
  type: ClusterIP
  selector:
    app: kandula
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000


   
#---

#apiVersion: v1
#kind: Pod
#metadata:
#  name: awscli
#  namespace: kandula
#  labels:
#    app: awscli
#spec:
#  serviceAccountName: kandula-sa
#  containers:
#  - image: amazon/aws-cli
#    command:
#      - "sleep"
#      - "604800"
#    imagePullPolicy: IfNotPresent
#    name: awscli
#  restartPolicy: Always
